# lab3

./: CMakeLists.txt
lib/: bitmap.cpp  bitmap.h  parcing.cpp  parsing.h
